added Jump sounds and started on json file saving for settings

--- a/res.qrc
+++ b/res.qrc
@@ -4,4 +4,7 @@
         <file>astolfoR.png</file>
         <file>jump.png</file>
     </qresource>
+    <qresource prefix="/sound">
+        <file>cartoon-jump-6462.mp3</file>
+    </qresource>
 </RCC>
