added theme toggled and themes

--- a/res.qrc
+++ b/res.qrc
@@ -7,4 +7,8 @@
     <qresource prefix="/sound">
         <file>cartoon-jump-6462.mp3</file>
     </qresource>
+    <qresource prefix="/themes">
+        <file>light.qss</file>
+        <file>dark.qss</file>
+    </qresource>
 </RCC>
